--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/global.css';
-import { HomeIcon } from "@heroicons/react/outline";
+import { HomeIcon } from "@heroicons/react/outline/index.js";
 
 const props = Astro.props;
 const title = props.content?.title || props.title;
