Experiment support for stripping in-game chat

--- a/src/pages/ffxiv.astro
+++ b/src/pages/ffxiv.astro
@@ -10,7 +10,7 @@ import FFXIVMacroChatModeConverter from "../components/FFXIVMacroChatModeConvert
       </header>
 
       <section>
-        <p class="py-2 leading-relaxed">Change the chat mode of a chat macro (for example, change a raid macro to always go into party chat)</p>
+        <p class="py-2">Change the chat mode of a chat macro (e.g. change a raid macro to always go into party chat), and experimentally remove all of the chat-specific information (in case you want to copy it from in-game chat).</p>
       </section>
 
       <FFXIVMacroChatModeConverter client:load />
