Update FFXIV page (and add contact)

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -14,7 +14,7 @@ const title = props.content?.title || props.title;
 	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 <body class="min-w-screen min-h-screen bg-gradient-to-t from-slate-900 to-slate-800 text-slate-100 flex flex-col items-stretch">
-	<main>
+	<main class="py-8">
 		<header class="p-4 container mx-auto">
       <h1 class="text-3xl font-bold">
       {props.hideHome ? null : (<a class="pr-2" href="/"><HomeIcon className="w-8 h-8 inline-block" /></a>)}
