Update contact options & credits

--- a/src/pages/ffxiv.astro
+++ b/src/pages/ffxiv.astro
@@ -16,7 +16,7 @@ import Contact from "../components/Contact";
 
       <FFXIVMacroChatModeConverter client:load />
 
-      <Contact />
+      <Contact credits={{ffxiv: true, discord: true}} />
     </article>
   </div>
 </MainLayout>
