--- a/src/pages/ffxiv/chat-macro.astro
+++ b/src/pages/ffxiv/chat-macro.astro
@@ -1,7 +1,7 @@
 ---
-import MainLayout from "../layouts/MainLayout.astro";
-import FFXIVMacroChatModeConverter from "../components/FFXIVMacroChatModeConverter";
-import Contact from "../components/Contact";
+import MainLayout from "../../layouts/MainLayout.astro";
+import MacroChatModeConverter from "../../components/ffxiv/MacroChatModeConverter";
+import Contact from "../../components/Contact";
 ---
 <MainLayout title="FFXIV Toolkit">
   <div class="md:container mx-auto p-4">
@@ -14,7 +14,7 @@ import Contact from "../components/Contact";
         <p class="py-2">Change the chat mode of a chat macro (e.g. change a raid macro to always go into party chat), and experimentally remove all of the chat-specific information (in case you want to copy it from in-game chat).</p>
       </section>
 
-      <FFXIVMacroChatModeConverter client:load />
+      <MacroChatModeConverter client:load />
 
       <Contact credits={{ffxiv: true, discord: true}} />
     </article>
