--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,9 @@ import MainLayout from "../layouts/MainLayout.astro";
       <ul class="list-disc p-4">
         <li>
           <a class="underline" href="/ffxiv">FFXIV (Final Fantasy XIV)</a>
+          <ul class="list-disc">
+            <li>Wat</li>
+          </ul>
         </li>
       </ul>
     </article>
