Fix tools index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,11 @@ import MainLayout from "../layouts/MainLayout.astro";
       <h2 class="text-xl font-bold mt-8">List of Tools:</h2>
       <ul class="list-disc p-4">
         <li>
-          <a class="underline" href="/ffxiv">FFXIV (Final Fantasy XIV)</a>
-          <ul class="list-disc">
-            <li>Wat</li>
+          FFXIV (Final Fantasy XIV)
+          <ul class="list-disc pl-4">
+            <li>
+              <a class="underline" href="/ffxiv/chat-macro">Chat macro converter</a>
+            </li>
           </ul>
         </li>
       </ul>
